--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="devchallenges.webp" />
     <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,7 +46,7 @@
           <p class="hero__beginning hero__inner-content">Unhappy with your website?</p>
           <h2 class="hero__title hero__inner-content font-lg" id="hero">We create beautiful and fast web services</h2>
         </div>
-        <img class="hero__img" src="./heroImage.jpg" alt="" width="1332" height="354" decoding="async" />
+        <img class="hero__img" src="./heroImage.webp" alt="" width="1332" height="354" decoding="async" />
       </section>
       <section class="sub-hero" aria-labelledby="sub-hero">
         <div class="container-sm">
@@ -86,22 +86,22 @@
         <h2 class="works__title font-md" id="ower-works">Good design means good business</h2>
         <ul class="works__list">
           <li class="works__item">
-            <img class="works__item-img" src="./smarthome.jpg" alt="" width="545" height="545" decoding="async" loading="lazy" />
+            <img class="works__item-img" src="./smarthome.webp" alt="" width="545" height="545" decoding="async" loading="lazy" />
             <p class="works__item-title">Full stack application</p>
             <p class="works__item-description">Smart home dashboard</p>
           </li>
           <li class="works__item">
-            <img class="works__item-img" src="./onboard.png" alt="" width="545" height="545" decoding="async" loading="lazy" />
+            <img class="works__item-img" src="./onboard.webp" alt="" width="545" height="545" decoding="async" loading="lazy" />
             <p class="works__item-title">Full stack application</p>
             <p class="works__item-description">Smart home dashboard</p>
           </li>
           <li class="works__item">
-            <img class="works__item-img" src="./booking.png" alt="" width="545" height="545" decoding="async" loading="lazy" />
+            <img class="works__item-img" src="./booking.webp" alt="" width="545" height="545" decoding="async" loading="lazy" />
             <p class="works__item-title">Full stack application</p>
             <p class="works__item-description">Smart home dashboard</p>
           </li>
           <li class="works__item">
-            <img class="works__item-img" src="./juice-product.png" alt="" width="545" height="545" decoding="async" loading="lazy" />
+            <img class="works__item-img" src="./juice-product.webp" alt="" width="545" height="545" decoding="async" loading="lazy" />
             <p class="works__item-title">Full stack application</p>
             <p class="works__item-description">Smart home dashboard</p>
           </li>
@@ -115,16 +115,16 @@
           <p class="team__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <ul class="team__member-list">
-          <li class="team__member"><img class="team__member-img" src="./person1.png" alt="" width="260" height="260" decoding="async" loading="lazy" /></li>
-          <li class="team__member"><img class="team__member-img" src="./person2.png" alt="" width="292" height="300" decoding="async" loading="lazy" /></li>
-          <li class="team__member"><img class="team__member-img" src="./person3.png" alt="" width="320" height="320" decoding="async" loading="lazy" /></li>
+          <li class="team__member"><img class="team__member-img" src="./person1.webp" alt="" width="260" height="260" decoding="async" loading="lazy" /></li>
+          <li class="team__member"><img class="team__member-img" src="./person2.webp" alt="" width="292" height="300" decoding="async" loading="lazy" /></li>
+          <li class="team__member"><img class="team__member-img" src="./person3.webp" alt="" width="320" height="320" decoding="async" loading="lazy" /></li>
         </ul>
       </section>
       <section class="clients container-md" aria-labelledby="clients">
         <h2 class="clients__title font-md" id="clients">“Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team.”</h2>
         <ul class="clients__list">
           <li class="clients__item">
-            <img class="clients__img" src="./person4.png" alt="" width="82" height="82" decoding="async" loading="lazy" />
+            <img class="clients__img" src="./person4.webp" alt="" width="82" height="82" decoding="async" loading="lazy" />
             <div>
               <p class="clients__name">Carlos Tran</p>
               <p class="clients__job">The Decorate Gatsby</p>
